# python-30min

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  settings.toml  workspace.toml
.devcontainer/: environment.yml
.giithub/workflows/: main.yaml
ai/llm/: index.html
ai/prompts/: index.html
ai/rag/: index.html
demos/: home.py
demos/ai_playground/prompts/: prompt_layer_demo.py
demos/data_pipeline/: __init__.py
demos/llm_agents/: openai_chatroom.py
demos/pages/: dashboard_page.py  mortgate_page.py  profile_page.py
demos/vanna_demo/: vanna_demo.py
docs/: TODOList.md  index.md  references.yaml
docs/ai/: references.yaml
docs/ai/llm/: langchain.md
docs/itermedia/: args_keywords.md  closures.md  decorator.md  generators.md  iterators.md
docs/modules/1-config/: chatgpt_dynaconf_raw.md  config-in-short.md
docs/modules/10-templates/: jinjia2-templates.md
docs/modules/11-pytest/: 1-pytest-order-dep-parameters.md  2-pytest-swith-env.md  3-pytest-fixture.md
docs/modules/12-magic/: notes-web.md
docs/modules/2-fastapi/: index.md
docs/modules/3-api-test/: reference.yaml
docs/modules/3-csv-excel-tablelike/: python-excel-csv.md
docs/modules/9-concurrent/: threadlocal-contextvar.md
docs/setup/: 1-poetry.md  3-jupter-notebook.md  3-pdm.md  4-generative-ai.md  5-monorepo.md  resources.yaml
docs/setup/ai/: llm-app-stack.md
docs/setup/conda/: conda.md
docs/setup/pdm/: 1-如何创建项目.md  2-如何安装和删除依赖.md  3-如何BuildPublish.md  4-如何编写脚本.md  5-如何配置.md  5-管理虚拟环境.md  6-生命周期.md  7-管理应用.md  8-cheatsheet.md
r_notes/: notes_parser.py  reference.yml
r_notes/basic/: 04-list.ipynb  07-dict-all.ipynb  12_exceptions.py  3-string-more.ipynb  7-functions.ipynb  dict.ipynb  logging_printing.ipynb  nice-painting.ipynb  oop.ipynb  operator.ipynb  variable.ipynb
r_notes/basic/features/: email-sender.ipynb  emial.tpl
r_notes/db/: sqlachemy-basic-sql.ipynb  sqlachemy_setup.ipynb
r_notes/db/mixin/: repo.py  sessions.py
r_notes/itermedia/: args_keywords.ipynb  closures.ipynb  decorator.ipynb  generators.ipynb  iterators.ipynb
r_notes/topics/: contextvars.ipynb  jinja2-one-page.ipynb  json-one-page.ipynb  pydantic-one-page.ipynb
r_notes/topics/templates/: examples.txt  examples_debug.txt  examples_more.txt
revisited_lessons/r_cache/: redis_client.py
revisited_lessons/r_code_structure/: org_codes_caller.py
revisited_lessons/r_concurrent/async_demo/: event_loop_demo.py  hello_async.py  shared_eventloop.py
revisited_lessons/r_concurrent/thread_demo/: thread_intro.py
revisited_lessons/r_config/: dynaconf_demo.py  models.py  pydantic_settings_demo.py  python_dotenv_demo.py
revisited_lessons/r_context/: __init__.py  conextvar_demo.py  contextlib_demo.py  thread_local_context_dmeo.py
revisited_lessons/r_db/: __init__.py  setup.py
revisited_lessons/r_db/demo/: base.py  models.py  plan_sql_demo.py
revisited_lessons/r_decorator/: retry_demo.py  timing_decorator_demo.py  try_excep_demo.py
revisited_lessons/r_decorators/: basic_decorator.py  decorate_class.py  method_registers.py  retry_demo.py  try_excep_demo.py  wrapper_deco.py
revisited_lessons/r_decorators/cases/: sql_decorators.py
revisited_lessons/r_di/: __init__.py  exceptions.py  injectable.py  namespace.py  providers.py  spell_container.py  types.py  utils.py
revisited_lessons/r_fastapi/: demo_apis.py
revisited_lessons/r_logger/: __init__.py  loguru_demo.py  rich_logger.py
revisited_lessons/r_meta/metaclass_all/: insepct_all.py  metaclass_intro.py  metaclass_mixin_demo.py  metaclass_singleton_demo.py  metaclass_type_demo.py  names.py  repository_demo.py
revisited_lessons/r_pandas/: basic.py
revisited_lessons/r_plugin_pattern/: plugin_mgt.py
revisited_lessons/r_plugin_pattern/plugins/: __init__.py  manager.py  models.py
revisited_lessons/r_postman/: __init__.py  cli.py  schema_converter.py
revisited_lessons/r_postman/mock/: fakemock_resolver.py  mock.py
revisited_lessons/r_postman/parser/: request.py  response.py
revisited_lessons/r_postman/spec/: __init__.py  operation.py  plugins.py  spec.py
revisited_lessons/r_rpa/: shot_scraper.py
revisited_lessons/r_structure/: pydantic_concepts.py  pydantic_concepts_orm.py  pydantic_model.py  pydantic_models_demo.py  pydantic_why.py
revisited_lessons/r_structure/dot_wizards/: base.py  dot_main.py  dot_plus.py
revisited_lessons/r_structure/structured_data/: table_like.py
revisited_lessons/r_templates/: temmplate_utils.py  template_demo.py
revisited_lessons/r_tips/: __init__.py
search/: search_index.json
setup/1-poetry/: index.html
setup/2-conda/: index.html
setup/3-jupter-notebook/: index.html
setup/3-pdm/: index.html
setup/4-generative-ai/: index.html
setup/5-monorepo/: index.html
src/revisited/: demo_apis.py  result.md  run.py
tests/: test_app_setting.py
tests/github_awesome/: test_github_extractor.py
tests/lessons/: test_sessions.py
tests/revisited_te/: test_config.py
(+77 files in other folders)
